// Copyright (c) 2017 Sony Corporation. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// *WARNING*
// THIS FILE IS AUTO-GENERATED BY CODE GENERATOR.
// PLEASE DO NOT EDIT THIS FILE BY HAND!
// If you want to modify this file, edit following files.
// - build-tools/code_generator/templates/src_nbla_proto_nnabla_proto_template.proto
// - build-tools/code_generator/generator/generate_src_nbla_proto_nnabla_proto.py

syntax = "proto3";

message Shape {{
  repeated int64 dim = 1 [packed = true];
}}

message Context {{
  string backend = 1;
  string array_class = 2;
  string device_id = 3;
  string compute_backend = 4;
}}

message NNablaProtoBuf {{
  string version = 1;
  GlobalConfig global_config = 2;
  TrainingConfig training_config = 10;

  repeated Network network = 100;
  repeated Parameter parameter = 200;
  repeated Dataset dataset = 300;
  repeated Optimizer optimizer = 400;
  repeated Monitor monitor = 500;
  repeated Executor executor = 600;
}}

message GlobalConfig {{
  Context default_context = 1;
}}

message TrainingConfig {{
  int64 max_epoch = 1;
  int64 iter_per_epoch = 2;

  bool save_best = 100;
}}

message Network {{
  string name = 1;

  int64 batch_size = 10;
  repeated RepeatInfo repeat_info = 11;

  repeated Variable variable = 100;
  repeated Function function = 200;
}}

message RepeatInfo {{
  string id = 1;
  int64 times = 2;
}}

message RepeatParameter {{
  string repeat_id = 1;
  int64 times = 2;
}}

message RecurrentParameter {{
  string repeat_id = 1;
  int64 length = 2;
  int64 axis = 3;
}}

message Variable {{
  string name = 1;
  string type = 2;
  repeated string repeat_id = 3;

  Shape shape = 20;

  Initializer initializer = 100;
}}

message Initializer {{
  string type = 2;
  float multiplier = 10;
}}

message Parameter {{
  string variable_name = 1;
  Shape shape = 20;
  repeated float data=100;
  bool need_grad=101;
}}

message Dataset {{
  string name = 1;
  string type = 2;

  string uri = 10;
  int64 batch_size = 20;
  string cache_dir = 30;
  bool overwrite_cache = 31;
  bool create_cache_explicitly = 32;

  bool shuffle = 100;
  bool no_image_normalization = 101;

  repeated string variable=200;
}}

message Optimizer {{
  string name = 1;

  int64 order = 3;

  string network_name = 10;
  string dataset_name = 20;

  Solver solver = 30;
  int64 update_interval = 40;

  repeated DataVariable data_variable = 50;
  repeated GeneratorVariable generator_variable = 60;
  repeated LossVariable loss_variable = 70;
  repeated ParameterVariable parameter_variable = 80;
}}

message Solver {{
  string type = 2;

  Context context = 10;

  float weight_decay = 20;

  float lr_decay = 30;
  int64 lr_decay_interval = 31;

  oneof parameter {{
    AdadeltaParameter adadelta_param = 100;
    AdagradParameter adagrad_param = 101;
    AdamParameter adam_param = 102;
    AdamaxParameter adamax_param = 103;
    MomentumParameter momentum_param = 105;
    NesterovParameter nesterov_param = 106;
    RMSpropParameter rmsprop_param = 107;
    SgdParameter sgd_param = 108;
  }}
}}

message AdagradParameter {{
  float lr = 1;
  float eps = 2;
}}

message AdadeltaParameter {{
  float lr = 1;
  float decay = 2;
  float eps = 3;
}}

message AdamParameter {{
  float alpha = 1;
  float beta1 = 2;
  float beta2 = 3;
  float eps = 4;
}}

message AdamaxParameter {{
  float alpha = 1;
  float beta1 = 2;
  float beta2 = 3;
  float eps = 4;
}}

message MomentumParameter {{
  float lr = 1;
  float momentum = 2;
}}

message NesterovParameter {{
  float lr = 1;
  float momentum = 2;
}}

message RMSpropParameter {{
  float lr = 1;
  float decay = 2;
  float eps = 3;
}}

message SgdParameter {{
  float lr = 1;
}}

message DataVariable {{
  string variable_name = 1;
  string data_name = 3;
}}

message GeneratorVariable {{
  string variable_name = 1;
  string type = 2;
  float multiplier = 3;
}}

message LossVariable {{
  string variable_name = 1;
}}

message ParameterVariable {{
  string variable_name = 1;
  float learning_rate_multiplier = 2;
}}

message Monitor {{
  string name = 1;

  string network_name = 10;
  string dataset_name = 20;

  repeated DataVariable data_variable = 50;
  repeated GeneratorVariable generator_variable = 60;
  repeated MonitorVariable monitor_variable = 70;
}}

message MonitorVariable {{
  string variable_name = 1;
  string type = 2;
  string data_name = 3;

  float multiplier = 100;
}}

message Executor {{
  string name = 1;

  string network_name = 10;

  int64 num_evaluations = 20;
  string repeat_evaluation_type = 21;

  bool need_back_propagation = 30;

  repeated DataVariable data_variable = 50;
  repeated GeneratorVariable generator_variable = 60;
  repeated LossVariable loss_variable = 70;
  repeated OutputVariable output_variable = 80;
  repeated ParameterVariable parameter_variable = 90;
}}

message OutputVariable {{
  string variable_name = 1;
  string type = 2;
  string data_name = 3;
}}

message Function {{
  string name = 1;
  string type = 2;
  repeated string repeat_id = 3;

  Context context = 10;
  repeated string input = 20;
  repeated string output = 30;

  oneof parameter
  {{
    {function_args}
  }}

  // Loop Functions
  RepeatParameter repeat_param = 100;
  RecurrentParameter recurrent_param = 101;
}}

{function_arg_definitions}
